force-app/main/default/objects/InvoiceHeaderSets__x/InvoiceHeaderSets__x.object-meta.xml
<CustomObject>
    <description>InvoiceHeaderSets</description>
    <externalDataSource>AusNet_OData</externalDataSource>
    <externalName>InvoiceHeaderSets</externalName>
    <label>InvoiceHeaderSets</label>
    <pluralLabel>InvoiceHeaderSets</pluralLabel>
</CustomObject>