force-app/main/default/objects/InvoiceHeaderSets__x/fields/CreationDate__c.field-meta.xml
<CustomField>
    <fullName>CreationDate__c</fullName>
    <description>CreationDate</description>
    <externalDeveloperName>CreationDate</externalDeveloperName>
    <label>CreationDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>