force-app/main/default/objects/InvoiceHeaderSets__x/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>DueDate</description>
    <externalDeveloperName>DueDate</externalDeveloperName>
    <label>DueDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>