force-app/main/default/objects/InvoiceHeaderSets__x/fields/InvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNo__c</fullName>
    <description>InvoiceNo</description>
    <externalDeveloperName>InvoiceNo</externalDeveloperName>
    <label>InvoiceNo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>