force-app/main/default/objects/InvoiceHeaderSets__x/fields/InvoicePdf__c.field-meta.xml
<CustomField>
    <fullName>InvoicePdf__c</fullName>
    <description>InvoicePdf</description>
    <externalDeveloperName>InvoicePdf</externalDeveloperName>
    <label>InvoicePdf</label>
    <type>TextArea</type>
</CustomField>