force-app/main/default/objects/InvoiceHeaderSets__x/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Link</description>
    <externalDeveloperName>Link</externalDeveloperName>
    <label>Link</label>
    <length>128</length>
    <type>Text</type>
</CustomField>