force-app/main/default/objects/InvoiceHeaderSets__x/fields/MerchantPayRef__c.field-meta.xml
<CustomField>
    <fullName>MerchantPayRef__c</fullName>
    <description>MerchantPayRef</description>
    <externalDeveloperName>MerchantPayRef</externalDeveloperName>
    <label>MerchantPayRef</label>
    <length>128</length>
    <type>Text</type>
</CustomField>