force-app/main/default/objects/InvoiceHeaderSets__x/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <description>NetAmount</description>
    <externalDeveloperName>NetAmount</externalDeveloperName>
    <label>NetAmount</label>
    <length>128</length>
    <type>Text</type>
</CustomField>