force-app/main/default/objects/InvoiceHeaderSets__x/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <description>PaymentDate</description>
    <externalDeveloperName>PaymentDate</externalDeveloperName>
    <label>PaymentDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>