force-app/main/default/objects/InvoiceHeaderSets__x/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <description>TotalAmount</description>
    <externalDeveloperName>TotalAmount</externalDeveloperName>
    <label>TotalAmount</label>
    <length>128</length>
    <type>Text</type>
</CustomField>