force-app/main/default/objects/InvoiceHeaderSets__x/fields/TotalGst__c.field-meta.xml
<CustomField>
    <fullName>TotalGst__c</fullName>
    <description>TotalGst</description>
    <externalDeveloperName>TotalGst</externalDeveloperName>
    <label>TotalGst</label>
    <length>128</length>
    <type>Text</type>
</CustomField>